--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7e5df">  <td>21/06/19 08:12:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@13f95696]">verifyLoginErrorMessage</td> 
-  <td>main@1088417975</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/20 16:01:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.verifyAddUser()[pri:1, instance:com.maven.testng.VerifyUserManagementPage@17a1e4ca]">verifyAddUser</td> 
+  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/20 16:00:36</td>   <td>-34719</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.getURL()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@17a1e4ca]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408279755</td>   <td></td> </tr>
 </table>
