--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,32 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.maven.testng.VerifyLoginTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyLoginErrorMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>closeBrowser</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>com.maven.testng.VerifyUserManagementPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
