--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyLoginWithCorrectCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyLoginErrorMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -26,10 +30,6 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td>com.maven.testng.VerifyUserManagementPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -37,7 +37,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddUser</td>
+<td>verifyAddUserAdmin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddUserESS</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
