--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:12:38</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@56113384]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2018260103</td>   <td></td> </tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:12:18</td>   <td>-19977</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@56113384]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2018260103</td>   <td></td> </tr>
-<tr bgcolor="e196d3">  <td>21/06/22 19:12:28</td>   <td>-9590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.verifyAddUserAdmin()[pri:1, instance:com.maven.testng.VerifyUserManagementPage@112f364d]">verifyAddUserAdmin</td> 
-  <td>main@2018260103</td>   <td></td> </tr>
-<tr bgcolor="e196d3">  <td>21/06/22 19:12:34</td>   <td>-4146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.verifyAddUserESS()[pri:2, instance:com.maven.testng.VerifyUserManagementPage@112f364d]">verifyAddUserESS</td> 
-  <td>main@2018260103</td>   <td></td> </tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:12:22</td>   <td>-15819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@56113384]">verifyLoginErrorMessage</td> 
-  <td>main@2018260103</td>   <td></td> </tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:12:23</td>   <td>-14246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@56113384]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@2018260103</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/23 21:46:33</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@301ec38b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2120063568</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/23 21:46:20</td>   <td>-12885</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@301ec38b]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2120063568</td>   <td></td> </tr>
+<tr bgcolor="e196d3">  <td>21/06/23 21:46:30</td>   <td>-2810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddUser()[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@5669c5fb]">verifyAddUser</td> 
+  <td>main@2120063568</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/23 21:46:24</td>   <td>-8756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@301ec38b]">verifyLoginErrorMessage</td> 
+  <td>main@2120063568</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>21/06/23 21:46:26</td>   <td>-7439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@301ec38b]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@2120063568</td>   <td></td> </tr>
 </table>
