Added Data Driver class
Created new method to get data from the excel sheet

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Kamal</td></tr>
+<tr><td>Vimal</td></tr>
+<tr><td>Ajith</td></tr>
+<tr><td>Sunil</td></tr>
+</table>
