--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,893</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">122</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.maven.testng.VerifyJobTitlesPage</td><td><a href="#m0">verifyAddUser</a></td><td rowspan="1">1624464990688</td><td rowspan="1">2809</td></tr><tr class="passedodd"><td rowspan="2">com.maven.testng.VerifyLoginTest</td><td><a href="#m1">verifyLoginErrorMessage</a></td><td rowspan="1">1624464984742</td><td rowspan="1">1313</td></tr><tr class="passedodd"><td><a href="#m2">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1624464986059</td><td rowspan="1">4628</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.maven.testng.DataDriver</td><td><a href="#m0">ASest1</a></td><td rowspan="4">1624679139785</td><td rowspan="4">1</td></tr><tr class="passedeven"><td><a href="#m1">ASest1</a></td></tr><tr class="passedeven"><td><a href="#m2">ASest1</a></td></tr><tr class="passedeven"><td><a href="#m3">ASest1</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.maven.testng.VerifyJobTitlesPage#verifyAddUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.maven.testng.VerifyLoginTest#verifyLoginErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.maven.testng.VerifyLoginTest#verifyLoginWithCorrectCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.maven.testng.DataDriver#ASest1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Ajith</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Ajith</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.maven.testng.DataDriver#ASest1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Sunil</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Sunil</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.maven.testng.DataDriver#ASest1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Kamal</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Kamal</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.maven.testng.DataDriver#ASest1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Vimal</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Vimal</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
