--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:39:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.getURL()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@17a1e4ca]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408279755</td>   <td></td> </tr>
-<tr bgcolor="b7e5df">  <td>21/06/22 19:39:26</td>   <td>11284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.verifyAddUserAdmin()[pri:1, instance:com.maven.testng.VerifyUserManagementPage@17a1e4ca]">verifyAddUserAdmin</td> 
-  <td>main@1408279755</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/26 09:15:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriver.ASest1(java.lang.String)[pri:0, instance:com.maven.testng.DataDriver@1e802ef9]">ASest1</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/26 09:15:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriver.ASest1(java.lang.String)[pri:0, instance:com.maven.testng.DataDriver@1e802ef9]">ASest1</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/26 09:15:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriver.ASest1(java.lang.String)[pri:0, instance:com.maven.testng.DataDriver@1e802ef9]">ASest1</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/26 09:15:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDriver.ASest1(java.lang.String)[pri:0, instance:com.maven.testng.DataDriver@1e802ef9]">ASest1</td> 
+  <td>main@530737374</td>   <td></td> </tr>
 </table>
