Added new method to get job titles from the excel sheet

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1946119318\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1727039200\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Ajith)">ASest1(Ajith)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Kamal)">ASest1(Kamal)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -114,12 +114,37 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Kamal)">ASest1(Kamal)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Vimal)">ASest1(Vimal)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Vimal)">ASest1(Vimal)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="ASest1(Ajith)">ASest1(Ajith)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="zzz(bbbbbb)">zzz(bbbbbb)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="zzz(aaaa)">zzz(aaaa)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="zzz(cccccc)">zzz(cccccc)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="zzz(dfggdgd)">zzz(dfggdgd)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.DataDriver" class="method navigator-link" hash-for-method="zzz(rrrr)">zzz(rrrr)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,10 +167,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ASest1(Ajith)">
-                  </a> <!-- ASest1(Ajith) -->
+                  <a name="ASest1(Kamal)">
+                  </a> <!-- ASest1(Kamal) -->
                   <span class="method-name">ASest1</span>
-                  <span class="parameters">(Ajith)</span>
+                  <span class="parameters">(Kamal)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -158,18 +183,58 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ASest1(Kamal)">
-                  </a> <!-- ASest1(Kamal) -->
-                  <span class="method-name">ASest1</span>
-                  <span class="parameters">(Kamal)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="ASest1(Vimal)">
                   </a> <!-- ASest1(Vimal) -->
                   <span class="method-name">ASest1</span>
                   <span class="parameters">(Vimal)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ASest1(Ajith)">
+                  </a> <!-- ASest1(Ajith) -->
+                  <span class="method-name">ASest1</span>
+                  <span class="parameters">(Ajith)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="zzz(bbbbbb)">
+                  </a> <!-- zzz(bbbbbb) -->
+                  <span class="method-name">zzz</span>
+                  <span class="parameters">(bbbbbb)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="zzz(aaaa)">
+                  </a> <!-- zzz(aaaa) -->
+                  <span class="method-name">zzz</span>
+                  <span class="parameters">(aaaa)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="zzz(cccccc)">
+                  </a> <!-- zzz(cccccc) -->
+                  <span class="method-name">zzz</span>
+                  <span class="parameters">(cccccc)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="zzz(dfggdgd)">
+                  </a> <!-- zzz(dfggdgd) -->
+                  <span class="method-name">zzz</span>
+                  <span class="parameters">(dfggdgd)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="zzz(rrrr)">
+                  </a> <!-- zzz(rrrr) -->
+                  <span class="method-name">zzz</span>
+                  <span class="parameters">(rrrr)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -177,7 +242,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1946119318\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1727039200\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -226,28 +291,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ASest1')
 data.setCell(0, 2, 'com.maven.testng.DataDriver')
-data.setCell(0, 3, 6);
+data.setCell(0, 3, 5);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ASest1')
+data.setCell(1, 1, 'zzz')
 data.setCell(1, 2, 'com.maven.testng.DataDriver')
-data.setCell(1, 3, 1);
+data.setCell(1, 3, 3);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ASest1')
 data.setCell(2, 2, 'com.maven.testng.DataDriver')
 data.setCell(2, 3, 1);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ASest1')
+data.setCell(3, 1, 'zzz')
 data.setCell(3, 2, 'com.maven.testng.DataDriver')
 data.setCell(3, 3, 1);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'zzz')
+data.setCell(4, 2, 'com.maven.testng.DataDriver')
+data.setCell(4, 3, 1);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'ASest1')
+data.setCell(5, 2, 'com.maven.testng.DataDriver')
+data.setCell(5, 3, 1);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'ASest1')
+data.setCell(6, 2, 'com.maven.testng.DataDriver')
+data.setCell(6, 3, 1);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'zzz')
+data.setCell(7, 2, 'com.maven.testng.DataDriver')
+data.setCell(7, 3, 1);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'zzz')
+data.setCell(8, 2, 'com.maven.testng.DataDriver')
+data.setCell(8, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 ms</span>
+              <span class="suite-total-time">Total running time: 14 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,9 +344,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">ASest1(Ajith)</span>
+              <span class="reporter-method-name">ASest1(Kamal)</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Ajith</span>
+                <span class="reporter-method-output">Kamal</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -271,15 +356,15 @@ return data;
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
-              <span class="reporter-method-name">ASest1(Kamal)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Kamal</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
               <span class="reporter-method-name">ASest1(Vimal)</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Vimal</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">ASest1(Ajith)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Ajith</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -304,15 +389,35 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ASest1(Vimal)</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">7 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ASest1(Ajith)</span>
-                <span class="method-start">11 ms</span>
+                <span class="method-start">9 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ASest1(Sunil)</span>
-                <span class="method-start">13 ms</span>
+                <span class="method-start">10 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">zzz(aaaa)</span>
+                <span class="method-start">34 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">zzz(cccccc)</span>
+                <span class="method-start">38 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">zzz(bbbbbb)</span>
+                <span class="method-start">39 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">zzz(dfggdgd)</span>
+                <span class="method-start">41 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">zzz(rrrr)</span>
+                <span class="method-start">43 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
