--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Kamal</td></tr>
-<tr><td>Vimal</td></tr>
-<tr><td>Ajith</td></tr>
-<tr><td>Sunil</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
