--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79cee3">  <td>21/06/27 12:08:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@340b9973]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@768776793</td>   <td></td> </tr>
-<tr bgcolor="77be74">  <td>21/06/27 12:08:30</td>   <td>13882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades()[pri:0, instance:com.maven.testng.VerifyPayGrades@112f364d]">verifyAddPayGrades</td> 
-  <td>main@768776793</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/27 12:08:33</td>   <td>16953</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@340b9973]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@768776793</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/27 12:08:21</td>   <td>5087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@340b9973]">verifyLoginErrorMessage</td> 
-  <td>main@768776793</td>   <td></td> </tr>
-<tr bgcolor="baa398">  <td>21/06/27 12:08:27</td>   <td>11315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyAddUser()[pri:0, instance:com.maven.testng.VerifyJobTitlesPage@362045c0]">verifyAddUser</td> 
-  <td>main@768776793</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/27 12:08:23</td>   <td>6600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@340b9973]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@768776793</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/29 20:44:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@189aa67a]">verifyLoginErrorMessage</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/29 20:44:45</td>   <td>1351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@189aa67a]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/29 20:44:33</td>   <td>-10352</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@189aa67a]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="baa398">  <td>21/06/29 20:45:12</td>   <td>27922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@3243b914]">verifyAddPayGrades</td> 
+  <td>main@307488715</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/29 20:45:14</td>   <td>30517</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@189aa67a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@307488715</td>   <td></td> </tr>
 </table>
