--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>aaaa</td></tr>
+<tr><td>cccccc</td></tr>
+<tr><td>bbbbbb</td></tr>
+<tr><td>dfggdgd</td></tr>
+<tr><td>rrrr</td></tr>
+<tr><td>gsf</td></tr>
+</table>
