--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
-<tr bgcolor="79cee3">  <td>21/06/29 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyPayGrades.verifyAddPayGrades(java.lang.String)[pri:0, instance:com.maven.testng.VerifyPayGrades@584f54e6]">verifyAddPayGrades</td> 
-  <td>main@1544078442</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/30 12:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@1e802ef9]">test</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/30 12:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@1e802ef9]">test</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/30 12:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@1e802ef9]">test</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/30 12:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@1e802ef9]">test</td> 
+  <td>main@530737374</td>   <td></td> </tr>
+<tr bgcolor="79cee3">  <td>21/06/30 12:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.test(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.maven.testng.VerifyUserManagementPage@1e802ef9]">test</td> 
+  <td>main@530737374</td>   <td></td> </tr>
 </table>
