Fixed the backend of the verifyEditJobTitle method

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/07 19:22:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/07 19:22:33</td>   <td>6593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginErrorMessage</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/07 19:22:34</td>   <td>8213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@73a2e526]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:40</td>   <td>13843</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.navigate()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:42</td>   <td>15846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">addUser</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:45</td>   <td>18505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">addUser</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:45</td>   <td>18527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">addUser</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:45</td>   <td>18566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">addUser</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/07 19:22:45</td>   <td>18582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@7d64e326]">addUser</td> 
-  <td>main@1799230133</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/07 19:22:45</td>   <td>18598</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@73a2e526]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1799230133</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/08 19:19:45</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@1fdf1c5]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/08 19:19:49</td>   <td>4129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@1fdf1c5]">verifyLoginErrorMessage</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/08 19:19:50</td>   <td>5704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@1fdf1c5]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/08 19:19:55</td>   <td>10706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobTitlesPage.verifyEditJobTitle(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.maven.testng.VerifyJobTitlesPage@2d96543c]">verifyEditJobTitle</td> 
+  <td>main@1406206626</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/08 19:19:55</td>   <td>10708</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@1fdf1c5]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1406206626</td>   <td></td> </tr>
 </table>
